syntax = "proto3";

package threshold;

import "google/protobuf/any.proto";

message SignatureProto {
    google.protobuf.Any aggregation = 1;
    bytes mask = 2;
}
